- include directories (via command line or TXT file)
- set defines via command line or TXT file
- defined() function (like C's ifdef/ifndef)
- Asar DLL: possibility to compile ASM from memory buffer
- customizable warning settings, like Clang or MSVC
- Some kind of include guard ("pragma once")
- stackable namespaces
- readfile() function to read arbitrary size of bytes into a memory buffer



v1.50 (by RPG Hacker):

New features:
- Added support for structs. Credits go to p4plus2: https://github.com/p4plus2/asar
- Added API to Asar lib for getting information on all blocks of data written by Asar.
- Added API to Asar lib for getting the mapper currently used by Asar.
- Added support for ExLoROM and ExHiROM mappers.
  NOTE: Based entirely on conversion tables I got from Ladida; don't know if these conversions
  are actually correct.
  Some features may not work as intended when using those mappers (such as freedata, for example),
  but I can't verify this.
- Added pushtable and pulltable commands, which let you back-up or restore the current character
  table to the/from the stack.
- Added "ext\notepad-plus-plus\syntax-highlighting.xml". This file can be imported into Notepad++
  as a user-defined language to add syntax highlighting for Asar patches, featuring all commands
  currently supported by Asar. By default, this syntax highlighting is enabled on all files with
  an extension of .asm or .asr, but this can be customized via Notepad++.

Bug fixes:
- Lines starting with @ or ;@ that don't map to a recognized special command now only throw
  warnings at best and no errors.
- Rewrote code of tests a little to make them easier to execute and make them clean up their
  own mess.
- C# wrapper for Asar DLL was non-functional since it didn't specify a calling convention,
  making it always lead to an exception in some scenarios.

Notes:
- Just like the last version, this version of Asar was built in MSVC rather than g++, but this